demo code/Delphi/dlbt.pas


// 单个种子中包含多个文件时的一些接口,index为文件的序列号，从0开始
function  DLBT_Downloader_GetFileCount(hDownloader: HANDLE): int; stdcall;
function  DLBT_Downloader_GetFileSize(hDownloader: HANDLE; index: int): UINT64; stdcall;
// 获取文件在torrent中的起始位置
function  DLBT_Downloader_GetFileOffset(hDownloader: HANDLE; index: int): UINT64; stdcall;
function  DLBT_Downloader_IsPadFile(hDownloader: HANDLE; index: int): Boolean; stdcall;
function  DLBT_Downloader_GetFilePathName(
                                         hDownloader: HANDLE;           // 下载任务的句柄
                                         index: int;                    // 文件的序号
                                         pBuffer: LPCWSTR;                // 传出文件名
                                         pBufferSize: pinteger;         // 传入buffer的大小，传出文件名的实际长度
                                         needFullPath: boolean = false  // 是否需要全部的路径还是只需要文件在种子中的相对路径
                                         ): HRESULT; stdcall;

// 该函数会将下载目录下存在，但torrent记录中不存在的文件全部删除，对单个文件的种子无效。请慎重使用。
function DLBT_Downloader_DeleteUnRelatedFiles (hDownloader: HANDLE): HRESULT; stdcall;

// 获取每个文件的Hash值，只有制作种子时使用bUpdateExt才能获取到
function DLBT_Downloader_GetFileHash (
           hDownloader: HANDLE;           // 下载任务的句柄
           index: int;                    // 要获取的文件的序号，piece的数目可以通过DLBT_Downloader_GetFileCount获得
           pBuffer: LPSTR;                // 传出Hash字符串
           pBufferSize: pinteger         // 传入pBuffer的大小，pieceInfoHash固定为20个字节，因此此处应该是20的长度。
           ): HRESULT; stdcall;


// 取文件的下载进度，该操作需要进行较多操作，建议仅在必要时使用
function  DLBT_Downloader_GetFileProgress(hDownloader: HANDLE; index: int): single; stdcall;

//设定文件优先级
function DLBT_Downloader_SetFilePrioritize(hDownloader: HANDLE;
                                           index: Int;
                                           prioritize: DLBT_FILE_PRIORITIZE;
                                           bDoPriority: BOOL = True): HRESULT; stdcall;
procedure DLBT_Downloader_ApplyPrioritize(hDownloader: HANDLE); stdcall;

function DLBT_Downloader_GetPiecesStatus(hDownloader: handle;   // 任务句柄
                                         pieceArray: PBOOL;     // 标记每个块是否本地已是最新的数组
                                         arrayLength: int;      // 数组的长度
                                         pieceDownloaded: PINT  // 已经下载的分块的数目，在显示下载的分块的图形时，该参数比较有用。如果发现该数字和上次获取时没有
                                                                // 变化，则可以不需要重画当前的分块状态图

                                         ): HRESULT; stdcall;

function DLBT_Downloader_SetPiecePrioritize(hDownloader: HANDLE;
                                            index: Int;                           // 块的序号
                                            prioritize: DLBT_FILE_PRIORITIZE;     // 优先级
                                            bDoPriority: BOOL = True              // 是否立即应用这个设置（如果有多个分块需要设置，建议暂时不立即应用，让最后一个块应用设置
                                                                                  // 或者可以主动调用DLBT_Downloader_ApplyPrioritize函数来应用，因为每应用一次设置都要对所有Piece
                                                                                  // 操作一遍，比较麻烦，所以应该一起应用

                                            ): HRESULT; stdcall;


//增加指定的源
procedure DLBT_Downloader_AddPeerSource(hDownloader: HANDLE; ip: LPCSTR; port: WORD); stdcall;

// 获得可显示的文件Hash值
function DLBT_Downloader_GetInfoHash(
                                      hDownloader: HANDLE;       // 下载任务的句柄
                                      pBuffer: LPSTR;            // 传出InfoHash的内存缓冲
                                      pBufferSize: pinteger      // 传入缓冲的大小，传出实际的InfoHash的长度
                                      ): HRESULT; stdcall;

function  DLBT_Downloader_GetPieceCount(hDownloader: HANDLE): int; stdcall;
function  DLBT_Downloader_GetPieceSize(hDownloader: HANDLE): int; stdcall;

// 主动保存一次状态文件，通知内部的下载线程后立即返回，是异步操作，可能会有一点延迟才会写。
procedure DLBT_Downloader_SaveStatusFile (hDownloader: HANDLE); stdcall;

//bOnlyPieceStatus： 是否只保存一些文件分块信息，便于服务器上生成后发给每个客户机；客户机就不用再比较了，直接快速启动. 默认是FALSE，也就是全部信息都保存
procedure DLBT_Downloader_SetStatusFileMode (hDownloader: HANDLE; bOnlyPieceStatus:BOOL); stdcall;

// 查看保存状态文件是否完成
function DLBT_Downloader_IsSavingStatus (hDownloader: HANDLE): BOOL; stdcall;

// 向BT系统中写入通过其它方式接收来的数据块。offset为该数据块在整个文件（文件夹）中的偏移量，size为数据块大小，data为数据缓冲区
// 成功返回S_OK，失败为其它，失败原因可能是该块不需要再次传输了。 本函数仅VOD增强版中有效
function DLBT_Downloader_AddPartPieceData(hDownloader: HANDLE; offset:UINT64; size:UINT64; data:LPBYTE): HRESULT; stdcall;

// 手工添加一块完整的数据进来 本函数仅VOD增强版中有效
function DLBT_Downloader_AddPieceData(
    hDownloader: HANDLE;
    piece:int;             //分块序号
    data:LPBYTE;           //数据本身
    bOverWrite:bool       //如果已经有了，是否覆盖
    ): HRESULT; stdcall;

{
以下接口暂时没有翻译 （只在高级版本-VOD点播版本或者网游专业版本中有效），请参照MFC示例中的DLBT/DLBT.h文件，仿照其它接口自己翻译
        有困难可以联系作者解决
// 每次要替换一个数据块时调用一下这个回调，外部可以根据这个回调显示替换的进度；以及是否终止整个替换工作（功能相当于：DLBT_Downloader_CancelReplace)
// 返回FALSE代表希望立即终止，TRUE代表继续。
// 一个分块可能会包括多个小文件（或者大文件的尾部，多文件粘连的地方），因此一个分块pieceIndex可能会对应了多个文件片段。本回调是替换一个文件片段时触发一次
typedef BOOL (WINAPI * DLBT_REPLACE_PROGRESS_CALLBACK) (
      IN void * pContext,                   // 回调的上下文（通过DLBT_Downloader_ReplacePieceData的pContext参数传入），这里传回去，便于外面处理
                                            // 比如，外部传入一个this指针，回调的时候再通过这个指针知道是对应哪个对象
      IN int pieceIndex,                    //本次要替换的数据位于哪个分块（分块在torrent中的索引）
      IN int replacedPieceCount,            //已经完成了多少个piece的替换
      IN int totalNeedReplacePieceCount,    //总共有多少个要替换的piece分块
      IN int fileIndex,                     //本次要替换的数据位于哪个文件
      IN UINT64 offset,                     //在这个文件中，这块数据的偏移量
      IN UINT64 size,                       //这块数据的总大小（距离偏移量）
      IN int replacedFileSliceCount,        //已经完成了多少个文件片段的替换                                  
      IN int totalFileSliceCount            //总共有多少个需要替换的文件片段
      );

// 替换数据块的接口：将某块数据直接替换到目标文件的相同位置，一般用于：下载时将需要下载的分块自动下载到一个临时目录，完成后再替换回原始文件
// 这样下载过程中原始文件可以正常使用，并保留了只下载部分数据的优点。
// 该函数是立即返回，如果HRESULT返回的不是S_OK，说明出错，需要查看返回值。
// 如果返回S_OK，则内部会启动线程来进行替换，中间的结果随时通过DLBT_Downloader_GetReplaceResult来进行查看结果。随时可以调用：DLBT_Downloader_CancelReplace进行取消线程操作
DLBT_API HRESULT WINAPI DLBT_Downloader_ReplacePieceData(
	HANDLE			hDownloader,		//下载任务句柄
	int   *			pieceArray,			// 需要将哪些分块替换，是一个int数组
	int				arrayLength,		// 分块数组的长度
	LPCWSTR			destFilePath,		// 需要替换的文件（文件夹）的目录。比如：E:\Test\1.rar或者E:\Test\Game\天龙八部 等。
	LPCWSTR			tempRootPathName = NULL,	// 临时目录下载时，如果使用了rootPathName，则这里也要设置上，以便从这个文件（文件夹）下读取数据块
	LPCWSTR			destRootPathName = NULL,	// 需要替换的那个下载任务，如果使用了rootPathName，则这里也要设置上，以便对这个文件（文件夹）进行替换
    LPVOID          pContext = NULL,
    DLBT_REPLACE_PROGRESS_CALLBACK  callback = NULL  //接收进度，并可以随时取消的回调
	);

// ReplacePieceData的一些状态，可以通过DLBT_Downloader_GetReplaceResult来进行查看
enum DLBT_REPLACE_RESULT
    DLBT_RPL_IDLE  = 0,     //尚未开始替换
    DLBT_RPL_RUNNING,       //正在运行中
    DLBT_RPL_SUCCESS,       //替换成功
    DLBT_RPL_USER_CANCELED, //替换了一半，用户取消掉了
    DLBT_RPL_ERROR,         //出错，可以通过hrDetail来获取详细信息，参考：DLBT_Downloader_GetReplaceResult


// 获取替换数据的结果
DLBT_API DLBT_REPLACE_RESULT WINAPI DLBT_Downloader_GetReplaceResult(
    HANDLE          hDownloader,        //下载任务句柄
    HRESULT  *      hrDetail,           //如果是有出错，返回详细的出错原因
    BOOL     *      bThreadRunning      //Replace的整个操作是否结束了（出错也会立即结束的）
    );

// 中间随时取消替换数据的操作（不建议取消，因为有可能会替换到一半，这样有些文件是不完整的）
DLBT_API void WINAPI DLBT_Downloader_CancelReplace(HANDLE hDownloader);

//////////////////////   Move的相关接口   /////////////
// Move的结果
enum DOWNLOADER_MOVE_RESULT
	DLBT_MOVED	= 0,	//移动成功
	DLBT_MOVE_FAILED,	//移动失败
	DLBT_MOVING         //正在移动


//移动到哪个目录，如果是同一磁盘分区，是剪切；如果是不同分区，是复制后删除原始文件。由于操作是异步操作，所以立即返回
//结果使用DLBT_Downloader_GetMoveResult去获取
DLBT_API void WINAPI DLBT_Downloader_Move (HANDLE hDownloader, LPCWSTR savePath);
//查看移动操作的结果
DLBT_API DOWNLOADER_MOVE_RESULT WINAPI DLBT_Downloader_GetMoveResult (
	HANDLE			hDownloader,   // 下载任务的句柄
	LPSTR			errorMsg,      // 用于返回出错信息的内存，在DLBT_MOVE_FAILED状态下这里返回出错的详情。如果传入NULL，则不返回错误信息
	int				msgSize		   // 出错信息内存的大小
	); 

}


// ***************************  以下是制作种子相关的接口 ********************************


// 创建一个Torrent的句柄，返回内存中种子的句柄
function  DLBT_CreateTorrent(
                            pieceSize: int;                 // 文件的分块大小
                            filename: LPCWSTR;               // 文件名或者目录（目录则将目录下所有文件制作一个种子）
                            publisher: LPCWSTR = nil;       // 发布者信息
                            publisherUrl: LPCWSTR = nil;     // 发布者的网址
                            comment: LPCWSTR = nil;          // 评论和描述
                            torrentType: DLBT_TORRENT_TYPE = USE_PUBLIC_DHT_NODE;   // 标记种子的类型
                            progress: PInteger = nil;
                            cancel: PBOOL = nil;
                            minPadFileSize: int = -1;
                            bUpdateExt: BOOL = False
                            ): HANDLE; stdcall; //是否增加用于更新的点量扩展信息，可以用于DLBT_Downloader_InitializeAsUpdater接口。仅商业版有效

// 指定种子包含的Tracker
function  DLBT_Torrent_AddTracker(
                          hTorrent: HANDLE;        // 种子的句柄
                          trackerURL: LPCWSTR;      // tracker的地址，可以是http Tracker或udp Tracker
                          tier: int                // 优先级和顺序
                          ): HRESULT; stdcall;

// 移除种子中的所有Tracker
procedure  DLBT_Torrent_RemoveAllTracker(hTorrent: HANDLE); stdcall;

// 指定种子可以使用的http源，如果下载的客户端支持http跨协议下载，则会自动从该地址进行下载
procedure DLBT_Torrent_AddHttpUrl(hTorrent:HANDLE; httpUrl: LPCWSTR); stdcall;

// 保存为torrent文件,filePath为路径（包括文件名）
function  DLBT_SaveTorrentFile(hTorrent:HANDLE; filePath: LPCWSTR; password: LPSTR = nil; bUseHashName: BOOL = False; extName:LPCWSTR = nil): HRESULT; stdcall;
// 释放torrent文件的句柄
procedure DLBT_ReleaseTorrent(hTorrent:HANDLE); stdcall;


// ***************************  以下是读取种子相关的接口 ********************************
//                     可以在不需要启动下载的情况下获得种子内的信息

// 打开一个种子句柄，便于修改或者读取信息进行操作；用完后，需要调用DLBT_ReleaseTorrent释放torrent文件的句柄
function  DLBT_OpenTorrent(
                           torrentFile: LPCWSTR;     // 种子文件全路径
                           password: LPCSTR          // 是否加密种子，如果为Null，则是普通种子，否则是种子的密码,以此密码进行解密
                           ): HANDLE; stdcall;

function  DLBT_OpenTorrentFromBuffer(
                           torrentFile: PByte;  //种子文件内容
                           dwTorrentFile: DWORD;
                           password: LPCSTR): HANDLE; stdcall;

// 关闭一个种子文件的句柄
//procedure DLBT_CloseTorrent(hTorrent: HANDLE); stdcall;

function DLBT_Torrent_GetComment(
                                 hTorrent: HANDLE;         // 种子文件句柄
                                 pBuffer: LPCWSTR;           // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回评论的实际大小
                                 pBufferSize: pinteger     // 传入评论的内存大小，传出评论的实际大小
                                 ): HRESULT; stdcall;

// 返回创建软件的信息
function DLBT_Torrent_GetCreator(
                                 hTorrent: HANDLE;         // 种子文件句柄
                                 pBuffer: LPWSTR;          // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回作者信息的实际大小
                                 pBufferSize: pinteger     // 传入存放信息的内存大小，传出作者信息的实际大小
                                 ): HRESULT; stdcall;
 
// 返回发布者信息                                
function DLBT_Torrent_GetPublisher(
                                 hTorrent: HANDLE;         // 种子文件句柄
                                 pBuffer: LPWSTR;           // 用于返回信息的内存，可以为空，为空则在pBufferSize中返回作者信息的实际大小
                                 pBufferSize: pinteger     // 传入存放信息的内存大小，传出作者信息的实际大小
                                 ): HRESULT; stdcall;
